<resources>
    <string name="app_name">DME</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_confirm_password_hint">Confirm Password</string>
    <string name="otp">Enter OTP</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Mobile No.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_phone">Enter Valid Phone Number</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="meal_suggestions">Meal Suggestions</string>
    <string name="breakfast_meal">Breakfast Meal</string>
    <string name="dinner_meal">Dinner Meal</string>
    <string name="lunch_meal">Lunch Meal</string>
    <string name="articles">Articles</string>
    <string name="search">Search...</string>
    <string name="meal_s_name">Meal’s Name</string>
    <string name="article_title">Article Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slide_1">our main goal to help patient to coping with disease,\n avoids the complications of this disease or to avoid the disease from the early state from discovering the risk rate of being diabetic </string>
    <!--for facebook login-->

    <!--facebook login ends-->

    <!--error messages-->
</resources>