<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark3"
    tools:context=".Login.Log_up">


    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/scrollable"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="Here’s\nyour first\nstep with \nus! "
                    android:textColor="@color/whiteTextColor" />

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="240dp"
                    android:layout_height="280dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="-2dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/logup" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextName"
                            style="@style/modifiedEditText"
                            android:hint="Name"
                            android:textColor="@color/black"

                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_email_hint"
                            android:textColor="@color/black"

                            android:inputType="textEmailAddress"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputMobile"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText                            android:id="@+id/editTextMobile"
                            style="@style/modifiedEditText"
                            android:hint="Mobile Number"
                            android:inputType="phone"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:textColor="@color/black"

                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputConfimPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextConfirmPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_confirm_password_hint"
                            android:textColor="@color/black"

                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                        android:id="@+id/cirRegisterButton"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:onClick="cirRegisterButton"
                        android:text="Register"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp" />

                    <TextView
                        style="@style/parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:onClick="onLoginClick"
                        android:text="Already have an account?"
                        android:textAlignment="center"
                        android:textColor="@color/blue_dark3"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:weightSum="12">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/whiteTextColor" />

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="Use other Methods"
                    android:textAlignment="center"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="12sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/whiteTextColor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:gravity="center">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    app:lottie_autoPlay="true"
                     app:lottie_loop="true"

                    android:background="@color/blue_dark3"
                    app:lottie_rawRes="@raw/facebook" />

                <com.airbnb.lottie.LottieAnimationView
                     android:background="@color/blue_dark3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                     android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    app:lottie_autoPlay="true"
                    android:layout_marginLeft="10dp"
                     app:lottie_loop="true"
                    app:lottie_rawRes="@raw/gmailicon" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"
        android:onClick="onLoginClick"
        android:src="@drawable/ic_back_img" />

</RelativeLayout>