<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark3"

    android:orientation="vertical"
    tools:context=".Meal_Suggestion.Suggest_meal_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/blue_dark3"
        android:elevation="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/meal_suggestions"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- breakfast meal-->
    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/breakfast_meal"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:cardElevation="10dp"
                android:background="#378CA3"
                app:cardCornerRadius="20dp"
                android:layout_marginStart="5dp"/>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:cardElevation="10dp"
                android:background="#378CA3"
                app:cardCornerRadius="20dp"
                android:layout_marginStart="5dp"/>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:cardElevation="10dp"
                android:background="#378CA3"
                app:cardCornerRadius="20dp"
                android:layout_marginStart="5dp"/>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:cardElevation="10dp"
                android:background="#378CA3"
                app:cardCornerRadius="20dp"
                android:layout_marginStart="5dp"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        app:cardElevation="10dp"
                        android:background="#378CA3"
                        app:cardCornerRadius="20dp"
                        android:layout_marginStart="5dp"/>
                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        app:cardElevation="10dp"
                        android:background="#378CA3"
                        app:cardCornerRadius="20dp"
                        android:layout_marginStart="5dp"/>
                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        app:cardElevation="10dp"
                        android:background="#378CA3"
                        app:cardCornerRadius="20dp"
                        android:layout_marginStart="5dp"/>
                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        app:cardElevation="10dp"
                        android:background="#378CA3"
                        app:cardCornerRadius="20dp"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </HorizontalScrollView>
    <!-- Dinner meal-->
    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/dinner_meal"
        android:textSize="20sp"
        android:textColor="@color/white"

        android:textStyle="bold"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:cardElevation="10dp"
                android:background="#378CA3"
                app:cardCornerRadius="20dp"
                android:layout_marginStart="5dp"/>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:cardElevation="10dp"
                android:background="#378CA3"
                app:cardCornerRadius="20dp"
                android:layout_marginStart="5dp"/>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:cardElevation="10dp"
                android:background="#378CA3"
                app:cardCornerRadius="20dp"
                android:layout_marginStart="5dp"/>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:cardElevation="10dp"
                android:background="#378CA3"
                app:cardCornerRadius="20dp"
                android:layout_marginStart="5dp"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        app:cardElevation="10dp"
                        android:background="#378CA3"
                        app:cardCornerRadius="20dp"
                        android:layout_marginStart="5dp"/>
                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        app:cardElevation="10dp"
                        android:background="#378CA3"
                        app:cardCornerRadius="20dp"
                        android:layout_marginStart="5dp"/>
                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        app:cardElevation="10dp"
                        android:background="#378CA3"
                        app:cardCornerRadius="20dp"
                        android:layout_marginStart="5dp"/>
                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        app:cardElevation="10dp"
                        android:background="#378CA3"
                        app:cardCornerRadius="20dp"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </HorizontalScrollView>
    <!-- Lunch meal-->
    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/lunch_meal"
        android:textColor="@color/white"

        android:textSize="20sp"
        android:textStyle="bold"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:cardElevation="10dp"
                android:background="#378CA3"
                app:cardCornerRadius="20dp"
                android:layout_marginStart="5dp"/>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:cardElevation="10dp"
                android:background="#378CA3"
                app:cardCornerRadius="20dp"
                android:layout_marginStart="5dp"/>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:cardElevation="10dp"
                android:background="#378CA3"
                app:cardCornerRadius="20dp"
                android:layout_marginStart="5dp"/>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:cardElevation="10dp"
                android:background="#378CA3"
                app:cardCornerRadius="20dp"
                android:layout_marginStart="5dp"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        app:cardElevation="10dp"
                        android:background="#378CA3"
                        app:cardCornerRadius="20dp"
                        android:layout_marginStart="5dp"/>
                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        app:cardElevation="10dp"
                        android:background="#378CA3"
                        app:cardCornerRadius="20dp"
                        android:layout_marginStart="5dp"/>
                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        app:cardElevation="10dp"
                        android:background="#378CA3"
                        app:cardCornerRadius="20dp"
                        android:layout_marginStart="5dp"/>
                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        app:cardElevation="10dp"
                        android:background="#378CA3"
                        app:cardCornerRadius="20dp"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </HorizontalScrollView>


</LinearLayout>